--- a/express-server/package.json
+++ b/express-server/package.json
@@ -12,9 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
+    "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
 }
